--- a/index.html
+++ b/index.html
@@ -36,38 +36,15 @@
     <div id="graphic"></div>
 
     <script>
-        var data = [{
-                "name": "Apples",
-                "value": 20,
-        },
-            {
-                "name": "Bananas",
-                "value": 12,
-        },
-            {
-                "name": "Grapes",
-                "value": 19,
-        },
-            {
-                "name": "Lemons",
-                "value": 5,
-        },
-            {
-                "name": "Limes",
-                "value": 16,
-        },
-            {
-                "name": "Oranges",
-                "value": 26,
-        },
-            {
-                "name": "Pears",
-                "value": 30,
-        }];
+        d3.tsv("datos/emergencias_por_departamento.tsv", function(d) {
+          d.frequency = +d.frequency;
+          return d;
+        }, function(error, data) {
+        if (error) throw error;
 
         //sort bars based on value
         data = data.sort(function (a, b) {
-            return d3.ascending(a.value, b.value);
+            return d3.ascending(a.Departamento, b.Emergencias_ocurridas);
         })
 
         //set up svg using margin conventions - we'll need plenty of room on the left for labels
@@ -90,13 +67,13 @@
         var x = d3.scale.linear()
             .range([0, width])
             .domain([0, d3.max(data, function (d) {
-                return d.value;
+                return d.Emergencias_ocurridas;
             })]);
 
         var y = d3.scale.ordinal()
             .rangeRoundBands([height, 0], .1)
             .domain(data.map(function (d) {
-                return d.name;
+                return d.Departamento;
             }));
 
         //make y axis to show bar names
@@ -119,12 +96,12 @@
         bars.append("rect")
             .attr("class", "bar")
             .attr("y", function (d) {
-                return y(d.name);
+                return y(d.Departamento);
             })
             .attr("height", y.rangeBand())
             .attr("x", 0)
             .attr("width", function (d) {
-                return x(d.value);
+                return x(d.Emergencias_ocurridas);
             });
 
         //add a value label to the right of each bar
@@ -132,14 +109,14 @@
             .attr("class", "label")
             //y position of the label is halfway down the bar
             .attr("y", function (d) {
-                return y(d.name) + y.rangeBand() / 2 + 4;
+                return y(d.Departamento) + y.rangeBand() / 2 + 4;
             })
             //x position is 3 pixels to the right of the bar
             .attr("x", function (d) {
-                return x(d.value) + 3;
+                return x(d.Emergencias_ocurridas) + 3;
             })
             .text(function (d) {
-                return d.value;
+                return d.Emergencias_ocurridas;
             });
         
     </script>
