--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ body {
   text-align: center;
 }
 </style>
-<svg width="960" height="500"></svg>
+<svg width="1200" height="500"></svg>
 <script src="https://d3js.org/d3.v4.min.js"></script>
 <script>
 var svg = d3.select("svg"),
@@ -39,7 +39,7 @@ var svg = d3.select("svg"),
   
 var tooltip = d3.select("body").append("div").attr("class", "toolTip");
   
-var x = d3.scaleLinear().range([0, width]);
+var x = d3.scalePow().range([0, width]);
 var y = d3.scaleBand().range([height, 0]);
 
 var g = svg.append("g")
@@ -78,7 +78,7 @@ d3.tsv("datos/emergencias_por_departamento.tsv", function(d) {
               .style("left", d3.event.pageX - 50 + "px")
               .style("top", d3.event.pageY - 70 + "px")
               .style("display", "inline-block")
-              .html((d.Departamento) + "<br>" + "£" + (d.Emergencias_ocurridas));
+              .html((d.Departamento) + "<br>" + (d.Emergencias_ocurridas));
         })
         .on("mouseout", function(d){ tooltip.style("display", "none");});
 });
