ajuste datos scatter plot

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ d3.tsv("datos/data.tsv", function(d) {
 <th>
 <script>
 
-d3.tsv("datos/impacto_eventos.tsv", function(d) {
+d3.tsv("datos/data.tsv", function(d) {
   return d;
 }, function(error, data) {
   if (error) throw error;
